--- a/index.html
+++ b/index.html
@@ -86,14 +86,9 @@
           </p>
           <p><a href="#" class="banner-link">Узнать подробнее</a></p>
           <a href="#timetable" class="arrow"></a>
-          <div class="banner-box">
-            <div class="box-gradient-left"></div>
-            <div class="box-gradient-right"></div>
-            <img class="box-image" src="images/girl.png" alt="girl" />
-          </div>
+          <div class="banner-box"></div>
         </div>
       </div>
-      
 
       <!---------EVENTS--------->
       <section>
