--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@
       <div class="footer">
         <div class="container">
           <div class="footer-item">
-            <div class="footer-logo">
-              <a href="#"></a>
-            </div>
+            <div class="footer-logo"></div>
             <ul class="footer-nav">
               <li><a href="#">Мероприятия</a></li>
               <li><a href="#">Расписание</a></li>
@@ -292,7 +290,7 @@
           </div>
           <!---------FOR MOBILE-------->
           <div class="footer-social-mobile">
-            <p class="footer-email">info@freefit.com</p>
+            <p class="footer-email">info@ freefit.com</p>
             <div class="footer-social">
               <a href="#" class="inst"></a>
               <a href="#" class="fb"></a>
