add style to 768px

--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
           </p>
           <p><a href="#" class="banner-link">Узнать подробнее</a></p>
           <a href="#timetable" class="arrow"></a>
-          <div class="banner-box"></div>
+          <div class="banner-box">
+            <div class="box-gradient-left"></div>
+            <div class="box-gradient-right"></div>
+          </div>
         </div>
       </div>
 
@@ -103,6 +106,7 @@
                   <p class="date">29.06 - 4.07</p>
                   <h3>Марафон выносливости</h3>
                   <a href="#marathon" class="button">Учавствовать</a>
+                  <a href="#marathon" class="button-mobile"></a>
                   <p class="type">марафон</p>
                 </div>
               </div>
@@ -114,6 +118,7 @@
                     тренером?
                   </h3>
                   <a href="#trainer" class="button">Учавствовать</a>
+                  <a href="#trainer" class="button-mobile"></a>
                   <p class="type">вебинар</p>
                 </div>
               </div>
@@ -122,6 +127,7 @@
                   <p class="date">15.07</p>
                   <h3>Йога, как стиль жизни</h3>
                   <a href="#yoga" class="button">Учавствовать</a>
+                  <a href="#yoga" class="button-mobile"></a>
                   <p class="type">вебинар</p>
                 </div>
               </div>
@@ -242,9 +248,10 @@
             <div class="cover-text">
               <h3 class="cover-text-title">О компании</h3>
               <p class="cover-text-description">
-                Наша компания является одной из немногих, кто предлагает фитнес
-                услуги онлайн! Оставайтесь с&nbsp;нами и вы сами увидите, что мы
-                проводим не&nbsp;только онлайн-тренировки.
+                Наша компания является одной из&nbsp;немногих, кто предлагает
+                фитнес услуги онлайн! Оставайтесь с&nbsp;нами
+                и&nbsp;вы&nbsp;сами увидите, что мы проводим не&nbsp;только
+                онлайн-тренировки.
               </p>
               <a href="#" class="cover-text-btn">Записаться</a>
             </div>
@@ -283,14 +290,6 @@
               <li><a href="#">О компании</a></li>
             </ul>
             <p class="footer-email">info@freefit.com</p>
-            <div class="footer-social">
-              <a href="#" class="inst"></a>
-              <a href="#" class="fb"></a>
-            </div>
-          </div>
-          <!---------FOR MOBILE-------->
-          <div class="footer-social-mobile">
-            <p class="footer-email">info@ freefit.com</p>
             <div class="footer-social">
               <a href="#" class="inst"></a>
               <a href="#" class="fb"></a>
