--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
               <div class="agreement">
                 <input type="checkbox" id="01" class="checkbox" />
                 <label for="01"
-                  >Согласен с обработкой
+                  ><span>Согласен с обработкой
                   <a href="https://annblok.ru/workshop" target="_blank"
                     >персональных данных</a
-                  ></label
+                  ></span></label
                 >
               </div>
             </form>
