--- a/index.html
+++ b/index.html
@@ -231,10 +231,12 @@
               <div class="agreement">
                 <input type="checkbox" id="01" class="checkbox" />
                 <label for="01"
-                  ><span>Согласен с обработкой
-                  <a href="https://annblok.ru/workshop" target="_blank"
-                    >персональных данных</a
-                  ></span></label
+                  ><span
+                    >Согласен с обработкой
+                    <a href="https://annblok.ru/workshop" target="_blank"
+                      >персональных данных</a
+                    ></span
+                  ></label
                 >
               </div>
             </form>
@@ -318,7 +320,6 @@
         <a href="#" class="inst"></a>
         <a href="#" class="fb"></a>
       </div>
-      <p><a href="#" class="banner-link">Узнать подробнее</a></p>
       <button class="burger-close" onclick="closeModalMenu()"></button>
     </div>
 
